Completed 6-css-properties exercise

--- a/week-1/6-css-properties/styles.css
+++ b/week-1/6-css-properties/styles.css
@@ -1,1 +1,22 @@
 /* Add your CSS code below */
+.link {
+  color: red;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+#message_time {
+  font-size: 0.9rem;
+}
+
+.message--unread {
+  border-left-color: blue;
+}
+
+.message__time--old {
+  opacity: 0.5;
+}
+
+.message {
+  line-height: 3;
+}
