--- a/week-1/7-css-box/styles.css
+++ b/week-1/7-css-box/styles.css
@@ -3,4 +3,8 @@
   border: 1px solid #4491db;
   border-radius: 4px;
   background: #fff;
+  /* width: ;
+  height: ;
+  margin: ;
+  padding: ; */
 }
