--- a/week-1/6-css-properties/styles.css
+++ b/week-1/6-css-properties/styles.css
@@ -1,22 +1,22 @@
 /* Add your CSS code below */
-.link {
+a {
   color: red;
   font-weight: bold;
   text-decoration: none;
 }
 
-#message_time {
+.message__time {
   font-size: 0.9rem;
 }
 
 .message--unread {
-  border-left-color: blue;
+  border-left-color: 5px solid blue;
 }
 
 .message__time--old {
-  opacity: 0.5;
+  opacity: 0.7;
 }
 
 .message {
-  line-height: 3;
+  line-height: 1.5;
 }
