--- a/week-1/8-advanced-selectors/styles.css
+++ b/week-1/8-advanced-selectors/styles.css
@@ -1,1 +1,13 @@
 /* Try different box model properties below */
+div [class="site-header"] > p {
+  color: white;
+  margin-bottom: 0px;
+}
+div [class="site-footer"] > p {
+  font-size: 12px;
+  text-align: center;
+}
+
+div [class="message message--unread"] {
+  box-shadow: 4px 4px 0 #dba944;
+}
