--- a/week-2/11-flexbox/flexbox.css
+++ b/week-2/11-flexbox/flexbox.css
@@ -1,1 +1,17 @@
 /* Add your own CSS code below */
+.countries--first {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.countries--second {
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.countries--third {
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column-reverse;
+}
