--- a/week-2/12-justify-content/flexbox.css
+++ b/week-2/12-justify-content/flexbox.css
@@ -1,5 +1,7 @@
 .countries {
   display: flex;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .countries--second .country {
@@ -7,3 +9,20 @@
 }
 
 /* Add your own CSS code below */
+.countries--first {
+  justify-content: flex-end;
+}
+
+.countries--second {
+  justify-content: space-between;
+}
+
+.countries--third {
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.countries--fourth {
+  flex-direction: column-reverse;
+  justify-content: space-between;
+}
