--- a/week-2/13-align-items/flexbox.css
+++ b/week-2/13-align-items/flexbox.css
@@ -1,4 +1,26 @@
 .countries {
   display: flex;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
 }
 /* Add your own CSS code below */
+.countries--first {
+  flex-direction: row;
+  align-items: center;
+  align-self: center;
+}
+
+.countries--second {
+  flex-direction: row-reverse;
+  align-items: flex-end;
+}
+
+.countries--third {
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.countries--fourth {
+  flex-direction: column-reverse;
+  align-items: center;
+}
