Completed 14-order exercise

--- a/week-2/14-order/flexbox.css
+++ b/week-2/14-order/flexbox.css
@@ -2,4 +2,23 @@
   display: flex;
 }
 
-/* Add your own CSS code below */
+/* Add your own CSS code below
+/* .countries--first{
+  order: 1;
+} */
+
+.countries.countries--first > .country--brazil {
+  order: 5;
+}
+
+.countries.countries--second > .country--brazil {
+  order: 4;
+}
+
+.countries.countries--second > .country--uganda {
+  order: 5;
+}
+
+.countries.countries--third {
+  flex-direction: row-reverse;
+}
