--- a/week-2/16-more-flexbox/flexbox.css
+++ b/week-2/16-more-flexbox/flexbox.css
@@ -3,3 +3,56 @@
 }
 
 /* Add your own CSS code below */
+.countries--first {
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.countries--second {
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.countries--third {
+  justify-content: center;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.countries--third > .country--brazil {
+  align-self: flex-end;
+}
+
+.countries--fourth {
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.countries--fourth > .country--ethiopia {
+  align-self: center;
+}
+
+.countries--fourth > .country--laos {
+  align-self: center;
+}
+
+.countries--fifth {
+  flex-direction: column-reverse;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+.countries.countries--second > .country--uganda {
+  order: 2;
+}
+
+.countries.countries--fifth > .country--laos {
+  order: 1;
+}
+
+.countries--fifth > .country--uganda {
+  align-self: center;
+}
