--- a/week-3/28-git-conflict/styles.css
+++ b/week-3/28-git-conflict/styles.css
@@ -1,6 +1,6 @@
 /* Add your own CSS code below */
 .link {
-  color: orangered;
+  color: #ff00e3;
   font-weight: 700;
   text-decoration: none;
 }
